[tool.poetry]
name = "cloth_woven_model"
version = "1.0.0"
description = ""
authors = ["Wenyan Bi <wenyan.bi@yale.edu>, Aalap Shah <aalap.shah@yale.edu>"]

[tool.poetry.dependencies]
python = "^3.6"
pyyaml = "^5.3.1"
multiprocess = "^0.70.11.1"
joblib = "^1.0.0"
scipy = "1.5.4"
numpy = "^1.19.4"
transforms3d = "^0.3.1"
matplotlib = "^3.3.3"
mkl = "2018.0.3"
mkl-devel = "2018.0.3"
cffi = "^1.14.4"
Pillow = "^8.1.0"
h5py = "3.1.0"
openexr = "^1.3.2"
requests = "^2.25.1"
opencv-python = "*"
pyvista = "0.31.3"
vtk = "8.1.2"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
